Añadiendo botón de registro

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </div>
     <div class="menu">
         <button class="cerrar-sesion left" onclick="home()">Inicio</button>
+        <button id="btn-registro" class="cerrar-sesion" onclick="registrarUsuarioNuevo()">Registro</button>
         <button class="cerrar-sesion" onclick="cerrarSesion()">Cerrar sesión</button>
     </div>
     <div class="center">
